--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fb18ec6
-	trimbase = 
+	trim = joint_trajectory_generator
+	base = ff97cf2
+	trimbase = fb18ec6
 	parent = upstream
 	previous = 4e13ab0
