--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 80ab7bb
-	trimbase = 
+	trim = pr2_common_action_msgs
+	base = f538ad9
+	trimbase = 80ab7bb
 	parent = upstream
 	previous = 4e13ab0
