--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4385730
-	trimbase = 
+	trim = pr2_arm_move_ik
+	base = c1f337f
+	trimbase = 4385730
 	parent = upstream
 	previous = 4e13ab0
