--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d25a097
-	trimbase = 
+	trim = pr2_common_actions
+	base = 02835c8
+	trimbase = d25a097
 	parent = upstream
 	previous = 4e13ab0
