--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5d019bb
-	trimbase = 
+	trim = joint_trajectory_action_tools
+	base = 375638c
+	trimbase = 5d019bb
 	parent = upstream
 	previous = 4e13ab0
