--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e79b236
-	trimbase = 
+	trim = pr2_tilt_laser_interface
+	base = fdf5844
+	trimbase = e79b236
 	parent = upstream
 	previous = 4e13ab0
