--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f542903
-	trimbase = 
+	trim = pr2_tuck_arms_action
+	base = 2da402b
+	trimbase = f542903
 	parent = upstream
 	previous = 4e13ab0
