--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6d8366f
+	base = 0457382
 	trimbase = 
 	parent = debian/hydro/pr2_common_action_msgs
-	previous = 
+	previous = 6d8366f
