--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a49b63e
+	base = 011ee6e
 	trimbase = 
 	parent = debian/hydro/pr2_tuck_arms_action
-	previous = 
+	previous = a49b63e
