--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fdf5844
+	base = 1e1e528
 	trimbase = 
 	parent = release/hydro/pr2_tilt_laser_interface
-	previous = 
+	previous = fdf5844
