--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = df34140
+	base = f00082e
 	trimbase = 
 	parent = debian/hydro/pr2_tilt_laser_interface
-	previous = 
+	previous = df34140
