--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ff97cf2
+	base = fbc8b08
 	trimbase = 
 	parent = release/hydro/joint_trajectory_generator
-	previous = 
+	previous = ff97cf2
