--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4391eff
+	base = b5cfb56
 	trimbase = 
 	parent = debian/hydro/joint_trajectory_generator
-	previous = 
+	previous = 4391eff
