--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 58cc66d
+	base = c1bf870
 	trimbase = 
 	parent = debian/hydro/joint_trajectory_action_tools
-	previous = 
+	previous = 58cc66d
