--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e1f366d
+	base = e03e6f0
 	trimbase = 
 	parent = debian/hydro/pr2_arm_move_ik
-	previous = 
+	previous = e1f366d
