--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e1f366d
+	base = 6c41fd5
 	trimbase = 
 	parent = debian/hydro/pr2_arm_move_ik
-	previous = 
+	previous = e1f366d
