--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d7fa292
+	base = 8c8b664
 	trimbase = 
 	parent = debian/hydro/pr2_common_actions
-	previous = 
+	previous = d7fa292
