--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f538ad9
+	base = 2b17bd3
 	trimbase = 
 	parent = release/hydro/pr2_common_action_msgs
-	previous = 
+	previous = f538ad9
