--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = db8afb7
+	base = cd070cf
 	trimbase = 
 	parent = rpm/hydro/pr2_common_action_msgs
-	previous = 
+	previous = db8afb7
