--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2da402b
+	base = c905e59
 	trimbase = 
 	parent = release/hydro/pr2_tuck_arms_action
-	previous = 
+	previous = 2da402b
