--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 850321d
+	base = a661bb7
 	trimbase = 
 	parent = rpm/hydro/pr2_tuck_arms_action
-	previous = 
+	previous = 850321d
