--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 051efce
+	base = e1b35e3
 	trimbase = 
 	parent = rpm/hydro/pr2_tilt_laser_interface
-	previous = 
+	previous = 051efce
