--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ce55afb
+	base = 5abc292
 	trimbase = 
 	parent = rpm/hydro/joint_trajectory_generator
-	previous = 
+	previous = ce55afb
