--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 375638c
+	base = d90095d
 	trimbase = 
 	parent = release/hydro/joint_trajectory_action_tools
-	previous = 
+	previous = 375638c
