--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d32f1d3
+	base = bd6dfa5
 	trimbase = 
 	parent = rpm/hydro/joint_trajectory_action_tools
-	previous = 
+	previous = d32f1d3
