--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c1f337f
+	base = 112b186
 	trimbase = 
 	parent = release/hydro/pr2_arm_move_ik
-	previous = 
+	previous = c1f337f
