--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0f642fb
+	base = fac55dd
 	trimbase = 
 	parent = rpm/hydro/pr2_arm_move_ik
-	previous = 
+	previous = 0f642fb
