--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 02835c8
+	base = 9de6fa7
 	trimbase = 
 	parent = release/hydro/pr2_common_actions
-	previous = 
+	previous = 02835c8
