--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7f10cb5
+	base = 6e41054
 	trimbase = 
 	parent = rpm/hydro/pr2_common_actions
-	previous = 
+	previous = 7f10cb5
