--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = eec8c99
-	trimbase = 
+	trim = joint_trajectory_generator
+	base = c680402
+	trimbase = eec8c99
 	parent = upstream
 	previous = 58927fe
