--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 708aae0
-	trimbase = 
+	trim = pr2_arm_move_ik
+	base = 9081634
+	trimbase = 708aae0
 	parent = upstream
 	previous = 58927fe
