--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3d3d92f
-	trimbase = 
+	trim = pr2_common_actions
+	base = acf2b5d
+	trimbase = 3d3d92f
 	parent = upstream
 	previous = 58927fe
