--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 99ee726
-	trimbase = 
+	trim = joint_trajectory_action_tools
+	base = 14f5a80
+	trimbase = 99ee726
 	parent = upstream
 	previous = 58927fe
