--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ab26e7e
-	trimbase = 
+	trim = pr2_tilt_laser_interface
+	base = ba4e115
+	trimbase = ab26e7e
 	parent = upstream
 	previous = 58927fe
