--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7eba056
+	base = abe434e
 	trimbase = 
 	parent = debian/indigo/pr2_common_actions
-	previous = 
+	previous = 7eba056
