--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f6bc394
+	base = a49a83a
 	trimbase = 
 	parent = debian/indigo/pr2_arm_move_ik
-	previous = 
+	previous = f6bc394
