--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a760370
+	base = 814a18d
 	trimbase = 
 	parent = debian/indigo/pr2_common_action_msgs
-	previous = 
+	previous = a760370
