--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ccfac2f
+	base = 7c91ece
 	trimbase = 
 	parent = debian/indigo/pr2_tuck_arms_action
-	previous = 
+	previous = ccfac2f
