--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2abf1d1
+	base = 4fcf675
 	trimbase = 
 	parent = debian/indigo/pr2_tilt_laser_interface
-	previous = 
+	previous = 2abf1d1
