--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c680402
+	base = 17ebb41
 	trimbase = 
 	parent = release/indigo/joint_trajectory_generator
-	previous = 
+	previous = c680402
