--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f938af0
+	base = 2bb3bf2
 	trimbase = 
 	parent = debian/indigo/joint_trajectory_generator
-	previous = 
+	previous = f938af0
