--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 14f5a80
+	base = a5d1902
 	trimbase = 
 	parent = release/indigo/joint_trajectory_action_tools
-	previous = 
+	previous = 14f5a80
