--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d6e2814
+	base = fd7f014
 	trimbase = 
 	parent = debian/indigo/joint_trajectory_action_tools
-	previous = 
+	previous = d6e2814
