--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = acf2b5d
+	base = 9c84a1b
 	trimbase = 
 	parent = release/indigo/pr2_common_actions
-	previous = 
+	previous = acf2b5d
