--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dda27e0
+	base = ee6ea41
 	trimbase = 
 	parent = rpm/indigo/pr2_common_actions
-	previous = 
+	previous = dda27e0
