--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9081634
+	base = 74a9c85
 	trimbase = 
 	parent = release/indigo/pr2_arm_move_ik
-	previous = 
+	previous = 9081634
