--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6d8bd96
+	base = 6ee9764
 	trimbase = 
 	parent = rpm/indigo/pr2_arm_move_ik
-	previous = 
+	previous = 6d8bd96
