--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9ac7b22
+	base = 74230f8
 	trimbase = 
 	parent = release/indigo/pr2_common_action_msgs
-	previous = 
+	previous = 9ac7b22
