--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 22d982e
+	base = d462d06
 	trimbase = 
 	parent = rpm/indigo/pr2_common_action_msgs
-	previous = 
+	previous = 22d982e
