--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ac58ff5
+	base = b9c2441
 	trimbase = 
 	parent = release/indigo/pr2_tuck_arms_action
-	previous = 
+	previous = ac58ff5
