--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9203cdb
+	base = 89b5dcc
 	trimbase = 
 	parent = rpm/indigo/pr2_tuck_arms_action
-	previous = 
+	previous = 9203cdb
