--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ba4e115
+	base = 4a8e8df
 	trimbase = 
 	parent = release/indigo/pr2_tilt_laser_interface
-	previous = 
+	previous = ba4e115
