--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2924e3c
+	base = a0fa93e
 	trimbase = 
 	parent = rpm/indigo/pr2_tilt_laser_interface
-	previous = 
+	previous = 2924e3c
