--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b8f18ba
+	base = 744f54a
 	trimbase = 
 	parent = rpm/indigo/joint_trajectory_generator
-	previous = 
+	previous = b8f18ba
