--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7a5b00a
+	base = 51dc1d0
 	trimbase = 
 	parent = rpm/indigo/joint_trajectory_action_tools
-	previous = 
+	previous = 7a5b00a
