--- a/tracks.yaml
+++ b/tracks.yaml
@@ -33,9 +33,10 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
     devel_branch: hydro-devel-unstable
+    last_version: 0.0.5
     name: pr2_common_actions
     patches: null
-    release_inc: -1
+    release_inc: '0'
     release_repo_url: null
     release_tag: 0.0.5
     ros_distro: indigo
