--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joint_trajectory_generator
-	base = b80c4a9
-	trimbase = 
+	base = fec20be
+	trimbase = b80c4a9
 	parent = upstream
 	previous = 58927fe
