--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_common_action_msgs
 	base = 9ac7b22
-	trimbase = b244bf5
+	trimbase = 
 	parent = upstream
 	previous = 58927fe
