--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_common_action_msgs
-	base = ac70d19
-	trimbase = 
+	base = 8f8f242
+	trimbase = ac70d19
 	parent = upstream
 	previous = 58927fe
