--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_arm_move_ik
-	base = 587e5ac
-	trimbase = 
+	base = dbb5adf
+	trimbase = 587e5ac
 	parent = upstream
 	previous = 58927fe
