--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_common_actions
-	base = 0c625e1
-	trimbase = 
+	base = 126ab79
+	trimbase = 0c625e1
 	parent = upstream
 	previous = 58927fe
