--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_tuck_arms_action
 	base = ac58ff5
-	trimbase = f10a035
+	trimbase = 
 	parent = upstream
 	previous = 58927fe
