--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_tuck_arms_action
-	base = 859dc2d
-	trimbase = 
+	base = d746455
+	trimbase = 859dc2d
 	parent = upstream
 	previous = 58927fe
