--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joint_trajectory_generator
-	base = 43efa5c
-	trimbase = 
+	base = 51456b7
+	trimbase = 43efa5c
 	parent = upstream
 	previous = 58927fe
