--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_common_action_msgs
-	base = b3ef29b
-	trimbase = 
+	base = 832b5f4
+	trimbase = b3ef29b
 	parent = upstream
 	previous = 58927fe
