--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_arm_move_ik
-	base = d6d806d
-	trimbase = 
+	base = 295ec81
+	trimbase = d6d806d
 	parent = upstream
 	previous = 58927fe
