--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_common_actions
-	base = 506d930
-	trimbase = 
+	base = 88abd9e
+	trimbase = 506d930
 	parent = upstream
 	previous = 58927fe
