--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joint_trajectory_action_tools
 	base = d50ff1a
-	trimbase = 1fb85d9
+	trimbase = 
 	parent = upstream
 	previous = 58927fe
