--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_tilt_laser_interface
 	base = 002c984
-	trimbase = 232f04a
+	trimbase = 
 	parent = upstream
 	previous = 58927fe
