--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_tilt_laser_interface
-	base = c626de6
-	trimbase = 
+	base = 7a2f0a0
+	trimbase = c626de6
 	parent = upstream
 	previous = 58927fe
