--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_tuck_arms_action
 	base = d746455
-	trimbase = 859dc2d
+	trimbase = 
 	parent = upstream
 	previous = 58927fe
