--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_tuck_arms_action
-	base = 49a8306
-	trimbase = 
+	base = d2ffa1a
+	trimbase = 49a8306
 	parent = upstream
 	previous = 58927fe
