Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.5-1": ["Tue Feb 10 2015", "Austin Hendrix", "ahendrix@willowgarage.com"], "0.0.5-0": ["Fri Feb 06 2015", "Austin Hendrix", "ahendrix@willowgarage.com"]}
+{"0.0.5-1": ["Tue Feb 10 2015", "Austin Hendrix", "ahendrix@willowgarage.com"], "0.0.5-0": ["Fri Feb 06 2015", "Austin Hendrix", "ahendrix@willowgarage.com"], "0.0.5-2": ["Thu Mar 26 2015", "Austin Hendrix", "ahendrix@willowgarage.com"]}
