--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_arm_move_ik
-	base = 2894c8b
-	trimbase = 
+	base = 22a5681
+	trimbase = 2894c8b
 	parent = upstream
 	previous = 58927fe
