--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_common_actions
-	base = 9e8c533
-	trimbase = 
+	base = d433bf8
+	trimbase = 9e8c533
 	parent = upstream
 	previous = 58927fe
