--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joint_trajectory_action_tools
-	base = 0044da7
-	trimbase = 
+	base = f741030
+	trimbase = 0044da7
 	parent = upstream
 	previous = 58927fe
