--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_tilt_laser_interface
-	base = 0380c70
-	trimbase = 
+	base = 7f56648
+	trimbase = 0380c70
 	parent = upstream
 	previous = 58927fe
