--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_tuck_arms_action
-	base = ef55f93
-	trimbase = 
+	base = dfeabfe
+	trimbase = ef55f93
 	parent = upstream
 	previous = 58927fe
