--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joint_trajectory_generator
 	base = 2e1cc49
-	trimbase = 5087749
+	trimbase = 
 	parent = upstream
 	previous = 58927fe
