--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joint_trajectory_generator
-	base = b627929
-	trimbase = 
+	base = 2eba668
+	trimbase = b627929
 	parent = upstream
 	previous = 58927fe
