--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_common_action_msgs
 	base = 2fa2b78
-	trimbase = ed44dd7
+	trimbase = 
 	parent = upstream
 	previous = 58927fe
