--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_common_action_msgs
-	base = dfc0e21
-	trimbase = 
+	base = ceb1fbd
+	trimbase = dfc0e21
 	parent = upstream
 	previous = 58927fe
