--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_arm_move_ik
-	base = cb28724
-	trimbase = 
+	base = 778bd19
+	trimbase = cb28724
 	parent = upstream
 	previous = 58927fe
