--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_common_actions
-	base = 07f3ed4
-	trimbase = 
+	base = eb77df8
+	trimbase = 07f3ed4
 	parent = upstream
 	previous = 58927fe
