--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joint_trajectory_action_tools
-	base = f2691eb
-	trimbase = 
+	base = 26d1fa9
+	trimbase = f2691eb
 	parent = upstream
 	previous = 58927fe
