--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_tilt_laser_interface
-	base = 55c5a59
-	trimbase = 
+	base = 9983d69
+	trimbase = 55c5a59
 	parent = upstream
 	previous = 58927fe
