--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = pr2_tuck_arms_action
-	base = 805fc69
-	trimbase = 
+	base = 9682ff9
+	trimbase = 805fc69
 	parent = upstream
 	previous = 58927fe
