--- a/pr2_arm_move_ik/package.xml
+++ b/pr2_arm_move_ik/package.xml
@@ -1,11 +1,11 @@
 <package>
   <name>pr2_arm_move_ik</name>
-  <version>0.0.5</version>
+  <version>0.0.10</version>
   <description>
     Move the pr2 arm using inverse kinematics
   </description>
 
-  <maintainer email="ahendrix@willowgarage.com">Austin Hendrix</maintainer>
+  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
 
   <author>Wim Meeusen</author>
   <author>Melonee Wise</author>
