--- a/pr2_common_action_msgs/package.xml
+++ b/pr2_common_action_msgs/package.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <package>
   <name>pr2_common_action_msgs</name>
-  <version>0.0.5</version>
+  <version>0.0.10</version>
   <description>The pr2_common_action_msgs package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
-  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
+  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
