--- a/pr2_tilt_laser_interface/package.xml
+++ b/pr2_tilt_laser_interface/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>pr2_tilt_laser_interface</name>
-  <version>0.0.5</version>
+  <version>0.0.10</version>
   <description>
     Provides a set of tools/actions for manipulating the pr2's tilting
     laser. Simplifies previously complex tasks, such as fetching
@@ -8,7 +8,7 @@
     driver and tilting platform.
   </description>
 
-  <maintainer email="ahendrix@willowgarage.com">Austin Hendrix</maintainer>
+  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
 
   <author>Radu Rusu</author>
   <author>Wim Meeusen</author>
