--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8965196
-	trimbase = 
+	trim = joint_trajectory_generator
+	base = b76965e
+	trimbase = 8965196
 	parent = upstream
 	previous = 264dea3
