--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 122ad3c
-	trimbase = 
+	trim = pr2_common_action_msgs
+	base = 28c6286
+	trimbase = 122ad3c
 	parent = upstream
 	previous = 264dea3
