--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4f1e7d4
-	trimbase = 
+	trim = pr2_arm_move_ik
+	base = 4695370
+	trimbase = 4f1e7d4
 	parent = upstream
 	previous = 264dea3
