--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = efe7c3c
-	trimbase = 
+	trim = pr2_common_actions
+	base = 34c292b
+	trimbase = efe7c3c
 	parent = upstream
 	previous = 264dea3
