--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c93b538
-	trimbase = 
+	trim = joint_trajectory_action_tools
+	base = dd00486
+	trimbase = c93b538
 	parent = upstream
 	previous = 264dea3
