--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 1e05a7f
-	trimbase = 
+	trim = pr2_tilt_laser_interface
+	base = a290714
+	trimbase = 1e05a7f
 	parent = upstream
 	previous = 264dea3
