--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0e102d8
-	trimbase = 
+	trim = pr2_tuck_arms_action
+	base = 051cab7
+	trimbase = 0e102d8
 	parent = upstream
 	previous = 264dea3
