--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dd00486
+	base = 43c2ff9
 	trimbase = 
 	parent = release/kinetic/joint_trajectory_action_tools
-	previous = 
+	previous = dd00486
