--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 909ad7b
+	base = 0963d79
 	trimbase = 
 	parent = debian/kinetic/joint_trajectory_action_tools
-	previous = 
+	previous = 909ad7b
