--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 051cab7
+	base = ff71b91
 	trimbase = 
 	parent = release/kinetic/pr2_tuck_arms_action
-	previous = 
+	previous = 051cab7
