--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a74991e
+	base = ba8739f
 	trimbase = 
 	parent = debian/kinetic/pr2_tuck_arms_action
-	previous = 
+	previous = a74991e
