--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 499a448
+	base = 70811b3
 	trimbase = 
 	parent = debian/kinetic/joint_trajectory_generator
-	previous = 
+	previous = 499a448
