--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 28c6286
+	base = 7e6ad41
 	trimbase = 
 	parent = release/kinetic/pr2_common_action_msgs
-	previous = 
+	previous = 28c6286
