--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3c7d20f
+	base = 9d70a32
 	trimbase = 
 	parent = debian/kinetic/pr2_common_action_msgs
-	previous = 
+	previous = 3c7d20f
