--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 34c292b
+	base = 2d07817
 	trimbase = 
 	parent = release/kinetic/pr2_common_actions
-	previous = 
+	previous = 34c292b
