--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0e727bc
+	base = 26d00d3
 	trimbase = 
 	parent = debian/kinetic/pr2_common_actions
-	previous = 
+	previous = 0e727bc
