--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4695370
+	base = 77ebab3
 	trimbase = 
 	parent = release/kinetic/pr2_arm_move_ik
-	previous = 
+	previous = 4695370
