--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ce19ed7
+	base = 6b18466
 	trimbase = 
 	parent = debian/kinetic/pr2_arm_move_ik
-	previous = 
+	previous = ce19ed7
