--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a290714
+	base = 106a027
 	trimbase = 
 	parent = release/kinetic/pr2_tilt_laser_interface
-	previous = 
+	previous = a290714
