--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5c4cf56
+	base = 627367b
 	trimbase = 
 	parent = debian/kinetic/pr2_tilt_laser_interface
-	previous = 
+	previous = 5c4cf56
