--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 89af9bb
+	base = f5b3808
 	trimbase = 
 	parent = debian/kinetic/joint_trajectory_action_tools
-	previous = 
+	previous = 89af9bb
