--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4fe766a
+	base = bf41fc5
 	trimbase = 
 	parent = debian/kinetic/pr2_tuck_arms_action
-	previous = 
+	previous = 4fe766a
