--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 78e39e5
+	base = 14631d8
 	trimbase = 
 	parent = debian/kinetic/joint_trajectory_generator
-	previous = 
+	previous = 78e39e5
