--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c4dbdfb
+	base = 2090565
 	trimbase = 
 	parent = debian/kinetic/pr2_common_action_msgs
-	previous = 
+	previous = c4dbdfb
