--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 585ecd2
+	base = 9093db3
 	trimbase = 
 	parent = debian/kinetic/pr2_common_actions
-	previous = 
+	previous = 585ecd2
