--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2870db4
+	base = 6aa7203
 	trimbase = 
 	parent = debian/kinetic/pr2_arm_move_ik
-	previous = 
+	previous = 2870db4
