--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eee96e8
+	base = 893f152
 	trimbase = 
 	parent = debian/kinetic/pr2_tilt_laser_interface
-	previous = 
+	previous = eee96e8
