--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f70aa0c
+	base = b13714d
 	trimbase = 
 	parent = rpm/kinetic/joint_trajectory_action_tools
-	previous = 
+	previous = f70aa0c
