--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 29d62ef
+	base = 978e65c
 	trimbase = 
 	parent = rpm/kinetic/pr2_tuck_arms_action
-	previous = 
+	previous = 29d62ef
