--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b76965e
+	base = 19dd5fb
 	trimbase = 
 	parent = release/kinetic/joint_trajectory_generator
-	previous = 
+	previous = b76965e
