--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e0b02bc
+	base = 969dca6
 	trimbase = 
 	parent = rpm/kinetic/joint_trajectory_generator
-	previous = 
+	previous = e0b02bc
