--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8e59e19
+	base = 9681f6a
 	trimbase = 
 	parent = rpm/kinetic/pr2_common_action_msgs
-	previous = 
+	previous = 8e59e19
