--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 05753d2
+	base = 5c6fd5a
 	trimbase = 
 	parent = rpm/kinetic/pr2_common_actions
-	previous = 
+	previous = 05753d2
