--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dc312a9
+	base = ee9f706
 	trimbase = 
 	parent = rpm/kinetic/pr2_arm_move_ik
-	previous = 
+	previous = dc312a9
