--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 418e0f6
+	base = 06586be
 	trimbase = 
 	parent = rpm/kinetic/pr2_tilt_laser_interface
-	previous = 
+	previous = 418e0f6
