--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 1c951e1
-	trimbase = 
+	trim = joint_trajectory_generator
+	base = 84ebdc1
+	trimbase = 1c951e1
 	parent = upstream
 	previous = 9c4df96
