--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8143971
-	trimbase = 
+	trim = pr2_common_action_msgs
+	base = 8bf0830
+	trimbase = 8143971
 	parent = upstream
 	previous = 9c4df96
