--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 605e709
-	trimbase = 
+	trim = pr2_arm_move_ik
+	base = 87d948a
+	trimbase = 605e709
 	parent = upstream
 	previous = 9c4df96
