--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8458e91
-	trimbase = 
+	trim = pr2_common_actions
+	base = 72edd40
+	trimbase = 8458e91
 	parent = upstream
 	previous = 9c4df96
