--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 72a402a
-	trimbase = 
+	trim = joint_trajectory_action_tools
+	base = c16d29c
+	trimbase = 72a402a
 	parent = upstream
 	previous = 9c4df96
