--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 11ece1d
-	trimbase = 
+	trim = pr2_tilt_laser_interface
+	base = 31e6d6b
+	trimbase = 11ece1d
 	parent = upstream
 	previous = 9c4df96
