--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 843ba41
-	trimbase = 
+	trim = pr2_tuck_arms_action
+	base = d50d025
+	trimbase = 843ba41
 	parent = upstream
 	previous = 9c4df96
