--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d50d025
+	base = c18a5ac
 	trimbase = 
 	parent = release/lunar/pr2_tuck_arms_action
-	previous = 
+	previous = d50d025
