--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f96e213
+	base = 5c8de08
 	trimbase = 
 	parent = debian/lunar/pr2_tuck_arms_action
-	previous = 
+	previous = f96e213
