--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c16d29c
+	base = 7de3ac1
 	trimbase = 
 	parent = release/lunar/joint_trajectory_action_tools
-	previous = 
+	previous = c16d29c
