--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d695052
+	base = 4375528
 	trimbase = 
 	parent = debian/lunar/joint_trajectory_action_tools
-	previous = 
+	previous = d695052
