--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 87d948a
+	base = 3901712
 	trimbase = 
 	parent = release/lunar/pr2_arm_move_ik
-	previous = 
+	previous = 87d948a
