--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bd79123
+	base = 4efc8ac
 	trimbase = 
 	parent = debian/lunar/pr2_arm_move_ik
-	previous = 
+	previous = bd79123
