--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 84ebdc1
+	base = c30d858
 	trimbase = 
 	parent = release/lunar/joint_trajectory_generator
-	previous = 
+	previous = 84ebdc1
