--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 337238c
+	base = 66d9920
 	trimbase = 
 	parent = debian/lunar/joint_trajectory_generator
-	previous = 
+	previous = 337238c
