--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 72edd40
+	base = 3997ab8
 	trimbase = 
 	parent = release/lunar/pr2_common_actions
-	previous = 
+	previous = 72edd40
