--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dbb744a
+	base = 0d2cfc7
 	trimbase = 
 	parent = debian/lunar/pr2_common_actions
-	previous = 
+	previous = dbb744a
