--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 31e6d6b
+	base = 6500839
 	trimbase = 
 	parent = release/lunar/pr2_tilt_laser_interface
-	previous = 
+	previous = 31e6d6b
