--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7f532f2
+	base = 7b92f44
 	trimbase = 
 	parent = debian/lunar/pr2_tilt_laser_interface
-	previous = 
+	previous = 7f532f2
