--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8bf0830
+	base = 196b55b
 	trimbase = 
 	parent = release/lunar/pr2_common_action_msgs
-	previous = 
+	previous = 8bf0830
