--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 51afe3d
+	base = 0401f61
 	trimbase = 
 	parent = debian/lunar/pr2_common_action_msgs
-	previous = 
+	previous = 51afe3d
