--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fec8053
+	base = f566aca
 	trimbase = 
 	parent = debian/lunar/pr2_tuck_arms_action
-	previous = 
+	previous = fec8053
