--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e92a488
+	base = 73db0a0
 	trimbase = 
 	parent = debian/lunar/joint_trajectory_action_tools
-	previous = 
+	previous = e92a488
