--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 21661cb
+	base = 0e7daa1
 	trimbase = 
 	parent = debian/lunar/pr2_arm_move_ik
-	previous = 
+	previous = 21661cb
