--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 265e939
+	base = c42fcc5
 	trimbase = 
 	parent = debian/lunar/joint_trajectory_generator
-	previous = 
+	previous = 265e939
