--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2b5cc88
+	base = 5c8c834
 	trimbase = 
 	parent = debian/lunar/pr2_common_actions
-	previous = 
+	previous = 2b5cc88
