--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1c2d4d1
+	base = 10a92b9
 	trimbase = 
 	parent = debian/lunar/pr2_tilt_laser_interface
-	previous = 
+	previous = 1c2d4d1
