--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8a4c4be
+	base = 28f709a
 	trimbase = 
 	parent = debian/lunar/pr2_common_action_msgs
-	previous = 
+	previous = 8a4c4be
