--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 32b61ab
-	trimbase = 
+	trim = joint_trajectory_generator
+	base = 3cf3663
+	trimbase = 32b61ab
 	parent = upstream
 	previous = 9c4df96
