--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6b57660
-	trimbase = 
+	trim = pr2_common_action_msgs
+	base = a7a99f9
+	trimbase = 6b57660
 	parent = upstream
 	previous = 9c4df96
