--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b9f5b54
-	trimbase = 
+	trim = pr2_arm_move_ik
+	base = bb6d7de
+	trimbase = b9f5b54
 	parent = upstream
 	previous = 9c4df96
