--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = aefc792
-	trimbase = 
+	trim = pr2_common_actions
+	base = 99a22da
+	trimbase = aefc792
 	parent = upstream
 	previous = 9c4df96
