--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b2a0f47
-	trimbase = 
+	trim = joint_trajectory_action_tools
+	base = ce1c9cc
+	trimbase = b2a0f47
 	parent = upstream
 	previous = 9c4df96
