--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ac04e7e
-	trimbase = 
+	trim = pr2_tilt_laser_interface
+	base = cb5f016
+	trimbase = ac04e7e
 	parent = upstream
 	previous = 9c4df96
