--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0f84b83
-	trimbase = 
+	trim = pr2_tuck_arms_action
+	base = b4b1c9b
+	trimbase = 0f84b83
 	parent = upstream
 	previous = 9c4df96
