--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 99a22da
+	base = 4435def
 	trimbase = 
 	parent = release/melodic/pr2_common_actions
-	previous = 
+	previous = 99a22da
