--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 519b80f
+	base = be8720f
 	trimbase = 
 	parent = debian/melodic/pr2_common_actions
-	previous = 
+	previous = 519b80f
