--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4133314
+	base = c241964
 	trimbase = 
 	parent = debian/melodic/joint_trajectory_action_tools
-	previous = 
+	previous = 4133314
