--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f161bde
+	base = 5ad0ea5
 	trimbase = 
 	parent = debian/melodic/pr2_tilt_laser_interface
-	previous = 
+	previous = f161bde
