--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c90e18e
+	base = 9d38d14
 	trimbase = 
 	parent = debian/melodic/pr2_tuck_arms_action
-	previous = 
+	previous = c90e18e
