--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3cf3663
+	base = d8a138f
 	trimbase = 
 	parent = release/melodic/joint_trajectory_generator
-	previous = 
+	previous = 3cf3663
