--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 64d4c6c
+	base = be0ba9f
 	trimbase = 
 	parent = debian/melodic/joint_trajectory_generator
-	previous = 
+	previous = 64d4c6c
