--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a7a99f9
+	base = 98ac2fe
 	trimbase = 
 	parent = release/melodic/pr2_common_action_msgs
-	previous = 
+	previous = a7a99f9
