--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 18f39a8
+	base = 83789f0
 	trimbase = 
 	parent = debian/melodic/pr2_common_action_msgs
-	previous = 
+	previous = 18f39a8
