--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4e6643e
+	base = 75a684d
 	trimbase = 
 	parent = debian/melodic/pr2_arm_move_ik
-	previous = 
+	previous = 4e6643e
