--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7de0bdf
+	base = 783cfc0
 	trimbase = 
 	parent = debian/melodic/pr2_common_actions
-	previous = 
+	previous = 7de0bdf
