--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f5736aa
+	base = 5dbb7be
 	trimbase = 
 	parent = debian/melodic/joint_trajectory_action_tools
-	previous = 
+	previous = f5736aa
