--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2f4e2d9
+	base = 6235ec9
 	trimbase = 
 	parent = debian/melodic/pr2_tilt_laser_interface
-	previous = 
+	previous = 2f4e2d9
