--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a34402a
+	base = fe19374
 	trimbase = 
 	parent = debian/melodic/pr2_tuck_arms_action
-	previous = 
+	previous = a34402a
