--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a75eeaf
+	base = bfc94d0
 	trimbase = 
 	parent = debian/melodic/joint_trajectory_generator
-	previous = 
+	previous = a75eeaf
