--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 889f8c3
+	base = dc872e1
 	trimbase = 
 	parent = debian/melodic/pr2_common_action_msgs
-	previous = 
+	previous = 889f8c3
