--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 202e545
+	base = 81e6649
 	trimbase = 
 	parent = debian/melodic/pr2_arm_move_ik
-	previous = 
+	previous = 202e545
