--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 220e8fa
+	base = c4a88e2
 	trimbase = 
 	parent = rpm/melodic/pr2_common_actions
-	previous = 
+	previous = 220e8fa
