--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ce1c9cc
+	base = 7098000
 	trimbase = 
 	parent = release/melodic/joint_trajectory_action_tools
-	previous = 
+	previous = ce1c9cc
