--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b038a6f
+	base = 11d469d
 	trimbase = 
 	parent = rpm/melodic/joint_trajectory_action_tools
-	previous = 
+	previous = b038a6f
