--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cb5f016
+	base = f08ab12
 	trimbase = 
 	parent = release/melodic/pr2_tilt_laser_interface
-	previous = 
+	previous = cb5f016
