--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bc61dfe
+	base = 0e0d306
 	trimbase = 
 	parent = rpm/melodic/pr2_tilt_laser_interface
-	previous = 
+	previous = bc61dfe
