--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b4b1c9b
+	base = 6ac2ada
 	trimbase = 
 	parent = release/melodic/pr2_tuck_arms_action
-	previous = 
+	previous = b4b1c9b
