--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ef2df24
+	base = ee2ef8e
 	trimbase = 
 	parent = rpm/melodic/pr2_tuck_arms_action
-	previous = 
+	previous = ef2df24
