--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9f983b0
+	base = f116c4e
 	trimbase = 
 	parent = rpm/melodic/joint_trajectory_generator
-	previous = 
+	previous = 9f983b0
