--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c209ede
+	base = 8ef9106
 	trimbase = 
 	parent = rpm/melodic/pr2_common_action_msgs
-	previous = 
+	previous = c209ede
