--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bb6d7de
+	base = 9cba087
 	trimbase = 
 	parent = release/melodic/pr2_arm_move_ik
-	previous = 
+	previous = bb6d7de
