--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 73f92a4
+	base = b525c13
 	trimbase = 
 	parent = rpm/melodic/pr2_arm_move_ik
-	previous = 
+	previous = 73f92a4
