--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0866b29
-	trimbase = 
+	trim = joint_trajectory_generator
+	base = 886a577
+	trimbase = 0866b29
 	parent = upstream
 	previous = db46fe8
