--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5be0fe8
-	trimbase = 
+	trim = pr2_common_action_msgs
+	base = 74678c5
+	trimbase = 5be0fe8
 	parent = upstream
 	previous = db46fe8
