--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fca9afe
-	trimbase = 
+	trim = pr2_arm_move_ik
+	base = bf11f61
+	trimbase = fca9afe
 	parent = upstream
 	previous = db46fe8
