--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ee680c2
-	trimbase = 
+	trim = pr2_common_actions
+	base = 1e3790b
+	trimbase = ee680c2
 	parent = upstream
 	previous = db46fe8
