--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = bd8b1cc
-	trimbase = 
+	trim = joint_trajectory_action_tools
+	base = a91c301
+	trimbase = bd8b1cc
 	parent = upstream
 	previous = db46fe8
