--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a55d558
-	trimbase = 
+	trim = pr2_tilt_laser_interface
+	base = 4916b8b
+	trimbase = a55d558
 	parent = upstream
 	previous = db46fe8
