--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e619781
-	trimbase = 
+	trim = pr2_tuck_arms_action
+	base = 10d47d0
+	trimbase = e619781
 	parent = upstream
 	previous = db46fe8
