--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 09935ba
+	base = 1075f4a
 	trimbase = 
 	parent = debian/noetic/joint_trajectory_generator
-	previous = 
+	previous = 09935ba
