--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1e3790b
+	base = 24a7ef5
 	trimbase = 
 	parent = release/noetic/pr2_common_actions
-	previous = 
+	previous = 1e3790b
