--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 139eea5
+	base = 051ce14
 	trimbase = 
 	parent = debian/noetic/pr2_common_actions
-	previous = 
+	previous = 139eea5
