--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4916b8b
+	base = e541a8e
 	trimbase = 
 	parent = release/noetic/pr2_tilt_laser_interface
-	previous = 
+	previous = 4916b8b
