--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 416fa2c
+	base = 68d7f9f
 	trimbase = 
 	parent = debian/noetic/pr2_tilt_laser_interface
-	previous = 
+	previous = 416fa2c
