--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bf11f61
+	base = ee852db
 	trimbase = 
 	parent = release/noetic/pr2_arm_move_ik
-	previous = 
+	previous = bf11f61
