--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 61ad617
+	base = b4202e9
 	trimbase = 
 	parent = debian/noetic/pr2_arm_move_ik
-	previous = 
+	previous = 61ad617
