--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 10d47d0
+	base = 5a0e34e
 	trimbase = 
 	parent = release/noetic/pr2_tuck_arms_action
-	previous = 
+	previous = 10d47d0
