--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 325195a
+	base = dd01509
 	trimbase = 
 	parent = debian/noetic/pr2_tuck_arms_action
-	previous = 
+	previous = 325195a
