--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 74678c5
+	base = 4a18706
 	trimbase = 
 	parent = release/noetic/pr2_common_action_msgs
-	previous = 
+	previous = 74678c5
