--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c733193
+	base = e573edf
 	trimbase = 
 	parent = debian/noetic/pr2_common_action_msgs
-	previous = 
+	previous = c733193
