--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 477ee7b
+	base = 6e9b378
 	trimbase = 
 	parent = debian/noetic/joint_trajectory_action_tools
-	previous = 
+	previous = 477ee7b
