--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b59ac62
+	base = 05ac128
 	trimbase = 
 	parent = debian/noetic/joint_trajectory_generator
-	previous = 
+	previous = b59ac62
