--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 715f815
+	base = c69f4e1
 	trimbase = 
 	parent = debian/noetic/pr2_common_actions
-	previous = 
+	previous = 715f815
