--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 255a15a
+	base = 57c92f1
 	trimbase = 
 	parent = debian/noetic/pr2_tilt_laser_interface
-	previous = 
+	previous = 255a15a
