--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a88805d
+	base = 0362ed6
 	trimbase = 
 	parent = debian/noetic/pr2_arm_move_ik
-	previous = 
+	previous = a88805d
