--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0eaeba5
+	base = 9c3c01d
 	trimbase = 
 	parent = debian/noetic/pr2_tuck_arms_action
-	previous = 
+	previous = 0eaeba5
