--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9243384
+	base = e45d5ce
 	trimbase = 
 	parent = debian/noetic/pr2_common_action_msgs
-	previous = 
+	previous = 9243384
