--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c2f172d
+	base = 76f4e34
 	trimbase = 
 	parent = debian/noetic/joint_trajectory_action_tools
-	previous = 
+	previous = c2f172d
