--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 886a577
+	base = a2d16f9
 	trimbase = 
 	parent = release/noetic/joint_trajectory_generator
-	previous = 
+	previous = 886a577
