--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1a75a96
+	base = 067c82c
 	trimbase = 
 	parent = rpm/noetic/joint_trajectory_generator
-	previous = 
+	previous = 1a75a96
