--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9a8f8cb
+	base = f2df2ae
 	trimbase = 
 	parent = rpm/noetic/pr2_common_actions
-	previous = 
+	previous = 9a8f8cb
