--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 16968a8
+	base = 3d34feb
 	trimbase = 
 	parent = rpm/noetic/pr2_tilt_laser_interface
-	previous = 
+	previous = 16968a8
