--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1344360
+	base = 457e142
 	trimbase = 
 	parent = rpm/noetic/pr2_arm_move_ik
-	previous = 
+	previous = 1344360
