--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3148457
+	base = ad55631
 	trimbase = 
 	parent = rpm/noetic/pr2_tuck_arms_action
-	previous = 
+	previous = 3148457
