--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cefbab2
+	base = 390bcdc
 	trimbase = 
 	parent = rpm/noetic/pr2_common_action_msgs
-	previous = 
+	previous = cefbab2
