--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a91c301
+	base = 62890fa
 	trimbase = 
 	parent = release/noetic/joint_trajectory_action_tools
-	previous = 
+	previous = a91c301
