--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 26688a6
+	base = eba9087
 	trimbase = 
 	parent = rpm/noetic/joint_trajectory_action_tools
-	previous = 
+	previous = 26688a6
